# winterfox

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  vite.config.ts  winfox.config.yaml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  Tauri.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/assets/styles/: global.scss  mixins.scss  variables.scss
src/components/: ScssDemo.vue
