[package]
name = "winterfox"
version = "0.1.0"
description = "Su Yuhu's Toolbox"
authors = ["SuYufox"]
license = "MIT"
repository = "https://github.com/suyufox/winterfox"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "winterfoxlib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = ["config-toml"] }

[dependencies]
winterfox-configs = { path = "../packages/configs" }
winterfox-plugins = { path = "../packages/plugins" }
winterfox-service = { path = "../packages/service" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["config-toml"] }
